# EXkururuIPROS

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.4stack.md  README.en.md  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  requirements-dev.txt
.github/workflows/: ci.yml
dashboard/: app.py  cloudflare_ip.py  deploy_tracker.py  e2e_eval.py  live_panel.py  notifier.py  parser.py  requirements.txt  security.py  storage.py  vuln.py  xdr_adapter.py
dashboard/static/: dashboard.js
dashboard/templates/: index.html
docs/: PUBLIC_TEST_DATASET.md  README.md  sample_threat_intel_feed.json
docs/tickets/SSRF-2026/: README.md  SSRF-2026-00-parent.md  SSRF-2026-01-ingest-decision-log.md  SSRF-2026-02-ruleset.md  SSRF-2026-03-scoring.md  SSRF-2026-04-egress-correlation.md  SSRF-2026-05-dns-rebinding.md  SSRF-2026-06-dashboard-tab.md  SSRF-2026-07-incident-engine.md  SSRF-2026-08-public-corpus.md  SSRF-2026-09-acceptance.md
scripts/: benchmark_ingest_dedupe.py  benchmark_insert_security_events_db.py  benchmark_sensor_control_loop.py  e2e_quality_gate.py  failure_injection_check.sh  import_threat_intel_feed.py  latest_attack_benchmark.py  load_test_api.sh  public_e2e_demo.py  shard_plan.py
sensor/: Cargo.toml  sensor.env.example
sensor/src/: main.rs
tests/: test_hard_negative_corpus.py  test_http2_bomb_defense.py  test_latest_attack_benchmark.py  test_mythos_pintheft_defense.py  test_public_e2e_demo.py  test_security_contract.py
